第六次提交10.10

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,7 @@
 ;# pytest.ini 配置
-;[pytest]
-;addopts = --reruns 2  # 失败后重试 2 次
-;markers =
-;    Fail_retry: 需要重试的测试
-
 
 [pytest]
 addopts = -s
+markers =
+    run: 用于 pytest-ordering 控制测试用例执行顺序
+    fail_retry: 需要重试的测试
