--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,11 @@
 ;# pytest.ini 配置
 
 [pytest]
-addopts = -s
+addopts = -v -s --alluredir=./allure-results --clean-alluredir
 markers =
     run: 用于 pytest-ordering 控制测试用例执行顺序
     fail_retry: 需要重试的测试
+    
+;# Allure报告配置
+;allure_report_dir = allure-report
+;allure_results_dir = allure-results
